tmt-workflow push

--- a/project/src/css/header.less
+++ b/project/src/css/header.less
@@ -1,10 +1,8 @@
-@import "import-lib-mixins";
-
-.mod-header{
+.header{
 	margin: 20px;
 	text-align: center;
 }
-.mod-header__logo{
+.header__logo{
 	text-align: center;
 	display: block;
 	margin: 0 auto 20px;
@@ -13,7 +11,7 @@
 	width:300px;
 	height:300px;
 }
-.mod-header__social-media{
+.header__social-media{
 	background: url(../img/bg-body.png) repeat;
 	text-align: center;
 	border-top:1px solid #eee;
