--- a/project/src/css/tips.less
+++ b/project/src/css/tips.less
@@ -1,7 +1,5 @@
-@import "import-lib-mixins";
-
 /* Tips style */
-.mod-tips{
+.tips{
 	border-left: 4px solid #b7e3f6;
 	background-color: #e9f6fb;
 	display: inline;
@@ -12,7 +10,7 @@
 		color: #ea5798;
 	}
 }
-.mod-tips__code{
+.tips__code{
 	padding: 4px;
 	.rounded(5px); 
 	.inner-shadow()
