--- a/project/src/css/style-index.less
+++ b/project/src/css/style-index.less
@@ -9,6 +9,9 @@
 @import "lib-mixins";
 @import "lib-reset";
 
+/* Import lib-rem.less if supportREM opened. */
+/* @import "lib-rem"; */
+
 /* Import modules like `header.less` */
 
 @import "header";
