--- a/project/src/css/lib-rem.less
+++ b/project/src/css/lib-rem.less
@@ -6,7 +6,8 @@ html {
   font-size: 20PX;
 }
 
-// 21.33333333 = 320*20/375 (iPhone 5)
+// 17.06 = 320*20/375 (iPhone 5)
+// 此处 hack 写法，使用 19px 代替 17px，兼容过小(<10px)的中文字体使用
 @media only screen and (min-width: 320px) {
   html {
     font-size: 19PX !important;
