全新 Demo 和 工作流源码详解 页面 * 添加 雪碧图、常规图、REM 使用文档 * 添加 媒体文件、EJS 模板、JS 压缩合并等用例

--- a/project/src/css/lib/lib-rem.less
+++ b/project/src/css/lib/lib-rem.less
@@ -42,7 +42,7 @@ html {
   }
 }
 
-// REM 适配 <html data-rem="320">
+// REM 适配, 用法: <html data-rem="320">
 
 // 320px (iPhone 5)
 // 此为基准值, 与视觉设计稿 `宽度/2` 保持一致
