增加多张雪碧图出口范例

--- a/project/src/css/mod-discovery.less
+++ b/project/src/css/mod-discovery.less
@@ -9,6 +9,7 @@
 	width: 25px;
 	height: 25px;
 	display: inline-block;
+	margin: 0 5px;
 }
 .mod-discovery__icon_moment{
 	background-image: url(../slice/mod-discovery/icon-moment@2x.png);
