--- a/project/src/css/mod-sticker.less
+++ b/project/src/css/mod-sticker.less
@@ -10,6 +10,7 @@
 	height: 50px;
 	display: inline-block;
 	background-size: 50px;
+	margin: 0 5px;
 }
 .mod-sticker__icon_1{
 	background-image: url(../img/mod-sticker/1.gif);
