--- a/project/src/css/mod-footer.less
+++ b/project/src/css/mod-footer.less
@@ -2,6 +2,7 @@
 .mod-footer{
 	font-size: 16px;
 	text-align: center;
+	overflow: hidden;
 }
 .mod-footer__link{
 	color: #27c946;
@@ -9,4 +10,5 @@
 	text-decoration: none;
 	padding-bottom:2px;
 	border-bottom:1px solid #27c946;
+	margin-bottom: 50px;
 }
