--- a/project/src/css/style-doc.less
+++ b/project/src/css/style-doc.less
@@ -15,6 +15,7 @@
 @import "mod-header";
 @import "mod-example";
 @import "mod-discovery";
+//@import "mod-social-media"; // 不调用可不引入依赖, 精简
 @import "mod-sticker";
 @import "mod-footer";
 
