--- a/project/src/css/style-index.less
+++ b/project/src/css/style-index.less
@@ -15,5 +15,6 @@
 @import "mod-header";
 @import "mod-example";
 @import "mod-discovery";
+@import "mod-social-media";
 @import "mod-sticker";
 @import "mod-footer";
