--- a/project/src/css/mod-example.less
+++ b/project/src/css/mod-example.less
@@ -11,6 +11,7 @@
 	padding: 5px;
 	margin-bottom: 20px;
 	color: #326532;
+	text-decoration: none;
 }
 .mod-example__preview{
 	border: 2px dashed #ddd;
@@ -21,6 +22,19 @@
 	height: auto;
 	background-image: url(../img/bg-body.png);
 	background-repeat: repeat;
+}
+.mod-example__notes{
+	background-color: rgba(237,223,0,0.04);
+	display: table;
+	margin: 0 auto;
+	border-radius: 5px;
+	padding: 10px;
+	font-size: 12px;
+	line-height: 20px;
+	text-align: left;
+	color: #888;
+	margin-bottom: 20px;
+	border: 1px solid rgba(237,223,0,0.24);
 }
 .mod-example__doc{
 
@@ -33,7 +47,7 @@
 .mod-example__show{
 	overflow: hidden;
 	margin: 0 50px;
-	font-size: 12px;
+	font-size: 16px;
 }
 .mod-example__before{
 	width: 49%;
