--- a/project/src/css/style-index.less
+++ b/project/src/css/style-index.less
@@ -9,7 +9,7 @@
 @import "./lib/lib-reset";
 
 /* 如果使用 REM 解决方案, 取消本行注释 */
-/* @import "./libs/lib-rem"; */
+@import "./lib/lib-rem";
 
 /* 引入 Less 依赖文件 */
 @import "mod-header";
