--- a/project-webpack/src/css/style-index.less
+++ b/project-webpack/src/css/style-index.less
@@ -8,7 +8,8 @@
 @import "./lib/lib-mixins";
 @import "./lib/lib-reset";
 
-/* 如果使用 REM 解决方案, 取消本行注释 */
+// 引入 REM 解决方案依赖
+// 调用示例 <html data-rem="375">
 @import "./lib/lib-rem";
 
 /* 引入 Less 依赖文件 */
