--- a/project-webpack/src/css/mod-discovery.less
+++ b/project-webpack/src/css/mod-discovery.less
@@ -12,23 +12,23 @@
 	margin: 0 5px;
 }
 .mod-discovery__icon_moment{
-	background-image: url(../slice/mod-discovery/icon-moment@2x.png);
+	background-image: url(../slice/mod-discovery/icon-moment.png);
 }
 .mod-discovery__icon_qrcode{
-	background-image: url(../slice/mod-discovery/icon-qrcode@2x.png);
+	background-image: url(../slice/mod-discovery/icon-qrcode.png);
 }
 .mod-discovery__icon_shake{
-	background-image: url(../slice/mod-discovery/icon-shake@2x.png);
+	background-image: url(../slice/mod-discovery/icon-shake.png);
 }
 .mod-discovery__icon_locaitonservice{
-	background-image: url(../slice/mod-discovery/icon-locaitonservice@2x.png);
+	background-image: url(../slice/mod-discovery/icon-locaitonservice.png);
 }
 .mod-discovery__icon_bottle{
-	background-image: url(../slice/mod-discovery/icon-bottle@2x.png);
+	background-image: url(../slice/mod-discovery/icon-bottle.png);
 }
 .mod-discovery__icon_jd{
-	background-image: url(../slice/mod-discovery/icon-jd@2x.png);
+	background-image: url(../slice/mod-discovery/icon-jd.png);
 }
 .mod-discovery__icon-game{
-	background-image: url(../slice/mod-discovery/icon-game@2x.png);
+	background-image: url(../slice/mod-discovery/icon-game.png);
 }
