--- a/project-webpack/src/css/mod-social-media.less
+++ b/project-webpack/src/css/mod-social-media.less
@@ -14,17 +14,17 @@
 	.rounded(10px);
 }
 .mod-social-media__icon_share{
-	background-image: url(../slice/mod-social-media/icon-share@2x.png);
+	background-image: url(../slice/mod-social-media/icon-share.png);
 }
 .mod-social-media__icon_moment{
-	background-image: url(../slice/mod-social-media/icon-moment@2x.png);
+	background-image: url(../slice/mod-social-media/icon-moment.png);
 }
 .mod-social-media__icon_favadd{
-	background-image: url(../slice/mod-social-media/icon-favadd@2x.png);
+	background-image: url(../slice/mod-social-media/icon-favadd.png);
 }
 .mod-social-media__icon_copy{
-	background-image: url(../slice/mod-social-media/icon-copy@2x.png);
+	background-image: url(../slice/mod-social-media/icon-copy.png);
 }
 .mod-social-media__icon_refresh{
-	background-image: url(../slice/mod-social-media/icon-refresh@2x.png);
+	background-image: url(../slice/mod-social-media/icon-refresh.png);
 }
