--- a/project/src/css/style-doc.less
+++ b/project/src/css/style-doc.less
@@ -4,18 +4,21 @@
  * @author: weixin
  */
 
-/* 引入库文件 */
+// 引入库文件
 @import "./lib/lib-mixins";
 @import "./lib/lib-reset";
 
-/* 如果使用 REM 解决方案, 取消本行注释 */
-//@import "./lib/lib-rem";
+// 引入 REM 解决方案依赖
+// 调用示例 <html data-rem="375">
+@import "./lib/lib-rem";
 
-/* 引入 Less 依赖文件 */
+// 引入 Less 依赖文件
 @import "mod-header";
 @import "mod-example";
 @import "mod-discovery";
-//@import "mod-social-media"; // 不调用可不引入依赖, 精简
+// @import "mod-social-media";
+// 不调用可不引入依赖, 精简
+
 @import "mod-sticker";
 @import "mod-footer";
 
