增加svg配套解决方案。

--- a/project/src/css/mod-discovery.less
+++ b/project/src/css/mod-discovery.less
@@ -32,3 +32,7 @@
 .mod-discovery__icon-game{
 	background-image: url(../slice/mod-discovery/icon-game.png);
 }
+.mod-svg__background-icon{
+	display: inline-block;
+	background-image: url(../img/svglogo.svg);
+}
