增加完整的换色demo

--- a/project/src/css/mod-example.less
+++ b/project/src/css/mod-example.less
@@ -57,3 +57,18 @@
 	width: 49%;
 	float: right;
 }
+.mod-example__svg-red{
+	use,path{
+		fill:red;
+	}
+}
+.mod-example__svg-blue{
+	use,path{
+		fill:blue;
+	}
+}
+.mod-example__svg-button{
+	background: gray;
+	color: white;
+	border-radius: 10px;
+}
