--- a/project/src/css/mod-sticker.less
+++ b/project/src/css/mod-sticker.less
@@ -2,8 +2,13 @@
 .mod-sticker{
 
 }
-.mod-sticker__list{
-
+.mod-sticker__list-border{
+    border: 1px solid #00aa22;
+    padding: 10px;
+    margin: 5px;
+    >div{
+    	padding:4px 0;
+    }
 }
 .mod-sticker__icon {
 	width: 50px;
