将svg目录单独提出来。

--- a/project/src/css/mod-discovery.less
+++ b/project/src/css/mod-discovery.less
@@ -34,5 +34,5 @@
 }
 .mod-svg__background-icon{
 	display: inline-block;
-	background-image: url(../img/svglogo.svg);
+	background-image: url(../svg/svglogo.svg);
 }
